--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -38,8 +38,24 @@
                     {% if request.user.is_authenticated %}
                     {% if perms.app.can_grade %}
                         <li><a href="{% url 'attendance' %}">Attendance</a></li>
-                        <li><a href="{% url 'student_name_tags' %}">Nametags</a></li>
-                        <li><a href="{% url 'grade_students' %}">Grading</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Nametags <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'student_name_tags' %}">Students</a></li>
+                                <li><a href="{% url 'teacher_name_tags' %}">Teachers</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Grading <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'grade_students' %}">Students</a></li>
+                                <li><a href="{% url 'grade_teams' %}">Teams</a></li>
+                            </ul>
+                        </li>
                     {% else %}
                         <li><a href="{% url 'teams' %}">My Teams</a></li>
                     {% endif %}
