--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
@@ -6,4 +7,5 @@
 
 {% endfor %}
 
+<script type="text/javascript" src="{% static "js/live.js" %}"></script>
 {% endblock %}
