--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -40,11 +40,12 @@
                         <li><a href="{% url 'attendance' %}">Attendance</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Nametags <span class="caret"></span>
+                                Spreadsheets <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'student_name_tags' %}">Students</a></li>
-                                <li><a href="{% url 'teacher_name_tags' %}">Teachers</a></li>
+                                <li><a href="{% url 'student_name_tags' %}">Student tags</a></li>
+                                <li><a href="{% url 'teacher_name_tags' %}">Teacher tags</a></li>
+                                <li><a href="{% url 'shirts' %}">Shirt sizes</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
