--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -3,9 +3,22 @@
 
 {% block content %}
 
-{% for division in scores %}
+<table class="divisions">
+    <tr>
+        <td valign="top">
+            <h2>Ramanujan</h2>
+            <table id="ramanujan" class="table table-striped">
+                <tr><td>test</td></tr>
+            </table>
+        </td>
+        <td valign="top">
+            <h2>Pascal</h2>
+            <table id="pascal" class="table table-striped">
+                <tr><td>test</td></tr>
+            </table>
+        </td>
+    </tr>
+</table>
 
-{% endfor %}
-
-<script type="text/javascript" src="{% static "js/live.js" %}"></script>
+<script type="text/javascript" src="{% static "js/guts.js" %}"></script>
 {% endblock %}
