--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -8,13 +8,13 @@
         <td valign="top">
             <h2>Ramanujan</h2>
             <table id="ramanujan" class="table table-striped">
-                <tr><td>test</td></tr>
+                <tbody></tbody>
             </table>
         </td>
         <td valign="top">
             <h2>Pascal</h2>
             <table id="pascal" class="table table-striped">
-                <tr><td>test</td></tr>
+                <tbody></tbody>
             </table>
         </td>
     </tr>
