--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -50,6 +50,14 @@
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Scoreboards <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'live' round="guts" %}">Live guts</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 Grading <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
