--- a/grading/templates/scoreboard.html
+++ b/grading/templates/scoreboard.html
@@ -1,3 +1,23 @@
-<html>
+{% extends "base.html" %}
+{% load staticfiles %}
 
-</html>
+{% block content %}
+
+<table class="divisions">
+    <tr>
+        <td valign="top">
+            <h2>Individual - Ramanujan</h2>
+            <table id="ramanujan" class="table table-striped">
+
+            </table>
+        </td>
+        <td valign="top">
+            <h2>Individual - Pascal</h2>
+            <table id="pascal" class="table table-striped">
+            </table>
+        </td>
+    </tr>
+</table>
+
+<script type="text/javascript" src="{% static "js/guts.js" %}"></script>
+{% endblock %}
