--- a/grading/templates/attendance.html
+++ b/grading/templates/attendance.html
@@ -13,10 +13,16 @@
             <tr>
             {% for student in row %}
                 <td class="attending">
+                {% if student %}
                     <input name="{{ student.id }}" type="checkbox" value="present" {% if student.attending %}checked{% endif %}>
                     <input name="{{ student.id }}" type="hidden" value="absent">
+                {% endif %}
                 </td>
-                <td class="name">{{ student.name }}</td>
+                <td class="name">
+                {% if student %}
+                    {{ student.name }}
+                {% endif %}
+                </td>
             {% endfor %}
             </tr>
         {% endfor %}
