--- a/grading/templates/scoreboard.html
+++ b/grading/templates/scoreboard.html
@@ -3,12 +3,18 @@
 
 {% block content %}
 
+<form action="{% url 'scoreboard' %}" method="POST">
+    <input type="hidden" name="recalculate">
+    <input type="submit" value="Submit">
+</form>
 <table class="divisions">
     <tr>
         <td valign="top">
             <h2>Individual - Ramanujan</h2>
             <table id="ramanujan" class="table table-striped">
-
+                {% for division in individual_scores %}
+                    {{ division }}
+                {% endfor %}
             </table>
         </td>
         <td valign="top">
