Updated rules with notation and stuff.

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -53,6 +53,7 @@
                                 Scoreboards <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a href="{% url 'scoreboard' %}">Scoreboard</a></li>
                                 <li><a href="{% url 'live' round="guts" %}">Live guts</a></li>
                             </ul>
                         </li>
