--- a/frontend/templates/rules.html
+++ b/frontend/templates/rules.html
@@ -24,10 +24,32 @@
 
 <a name="format"></a><h3>Round Format</h3>
 <ol class="top">
-    <li><b>The Subject Test round</b> consists of eight questions on one subject and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
+    <li><b>The Subject Test round</b> consists of eight questions per subject with two subject tests and lasts thirty minutes. The subjects are <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li>
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in half an hour.</li>
     <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. This year, <b class="red">different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
     <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
+</ol>
+
+<a name="notation"></a><h3>Important Notation</h3>
+<ol class="top">
+    <li><b>Sequence notation</b>: an denotes the <em>n</em><sup>th</sup> term of a sequence, where <em>n </em>is a positive integer. For example, in the sequence 1, 1, 2, 3, 5, &hellip;, a<sub>1</sub>=1, a<sub>2</sub>=1, a<sub>3</sub>=2, a<sub>4</sub>=3, and so on.</li>
+    <li><b>Factorial notation</b>: n! refers to the product of all positive integers up through <em>n</em>. That is: n! = n(n-1)(n-2)&hellip;(2)(1). For example, 4! = 4&sdot;3&sdot;2&sdot;1 = 24.</li>
+    <li><b>Ordered <em>n</em>-tuples</b>: Certain questions will ask for an answer as an ordered pair, ordered triple, or ordered 6-tuple. </li>
+    <ul>
+        <li>Ordered pairs: (<em>a</em>, <em>b</em>) </li>
+        <li>Ordered triples: (<em>a</em>, <em>b</em>, <em>c</em>)</li>
+        <li>Ordered 6-tuples: (<em>a</em>, <em>b</em>, <em>c</em>, <em>d</em>, <em>e</em>, <em>f</em>)</li>
+        <li><em>a,</em> <em>b, c,</em> etc. are numbers. Any answer in the form of an ordered <em>n</em>-tuple MUST include the parentheses and commas.</li>
+    </ul>
+    <li><b>Lines in geometry</b>: if a question asks &ldquo;compute AB&rdquo; or states that &ldquo;AB = 10,&rdquo; this refers to the length of line AB or the distance from A to B.</li>
+</ol>
+
+<a name="terminology"></a><h3>Important Terminology</h3>
+<ol>
+    <li>A circle is <b>inscribed</b> in a shape if it touches each side of the shape at one point and is inside the shape. A circle that is inscribed in a triangle is called the triangle&rsquo;s <b>incircle</b>. A circle is <b>circumscribed</b> about a shape if each vertex of the shape lies on the circle. A circle that is circumscribed about a triangle is called the triangle&rsquo;s <b>circumcircle</b>.</li>
+    <li>The <b>multiples</b> of a number are the positive numbers that divide into it evenly. For example, the multiples of 3 are 3, 6, 9, 12, and so on. The <b>factors</b> or <b>divisors</b> of a number are the positive numbers that it divides into evenly. For example, the factors of 6 are 1, 2, 3, and 6.</li>
+    <li>If two numbers or objects are selected <b>independently and at random</b>, this means that they are selected at random, and that how one is selected doesn&rsquo;t affect how the other is selected.</li>
+    <li>A <b>real number</b> is a rational number or an irrational number. -1, 2.5, and &pi; are all real numbers. Unless you&rsquo;ve learned about complex numbers, every number you know of is a real number.</li>
 </ol>
 
 <a name="answering"></a><h3>Answering Questions</h3>
