Finished grading view. Odd issues with too few scores.

--- a/frontend/templates/rules.html
+++ b/frontend/templates/rules.html
@@ -41,15 +41,15 @@
         <li>Ordered 6-tuples: (<em>a</em>, <em>b</em>, <em>c</em>, <em>d</em>, <em>e</em>, <em>f</em>)</li>
         <li><em>a,</em> <em>b, c,</em> etc. are numbers. Any answer in the form of an ordered <em>n</em>-tuple MUST include the parentheses and commas.</li>
     </ul>
-    <li><b>Lines in geometry</b>: if a question asks &ldquo;compute AB&rdquo; or states that &ldquo;AB = 10,&rdquo; this refers to the length of line AB or the distance from A to B.</li>
+    <li><b>Lines in geometry</b>: if a question asks "compute AB" or states that "AB = 10", this refers to the length of line AB or the distance from A to B.</li>
 </ol>
 
 <a name="terminology"></a><h3>Important Terminology</h3>
 <ol>
-    <li>A circle is <b>inscribed</b> in a shape if it touches each side of the shape at one point and is inside the shape. A circle that is inscribed in a triangle is called the triangle&rsquo;s <b>incircle</b>. A circle is <b>circumscribed</b> about a shape if each vertex of the shape lies on the circle. A circle that is circumscribed about a triangle is called the triangle&rsquo;s <b>circumcircle</b>.</li>
+    <li>A circle is <b>inscribed</b> in a shape if it touches each side of the shape at one point and is inside the shape. A circle that is inscribed in a triangle is called the triangle's <b>incircle</b>. A circle is <b>circumscribed</b> about a shape if each vertex of the shape lies on the circle. A circle that is circumscribed about a triangle is called the triangle's <b>circumcircle</b>.</li>
     <li>The <b>multiples</b> of a number are the positive numbers that divide into it evenly. For example, the multiples of 3 are 3, 6, 9, 12, and so on. The <b>factors</b> or <b>divisors</b> of a number are the positive numbers that it divides into evenly. For example, the factors of 6 are 1, 2, 3, and 6.</li>
-    <li>If two numbers or objects are selected <b>independently and at random</b>, this means that they are selected at random, and that how one is selected doesn&rsquo;t affect how the other is selected.</li>
-    <li>A <b>real number</b> is a rational number or an irrational number. -1, 2.5, and &pi; are all real numbers. Unless you&rsquo;ve learned about complex numbers, every number you know of is a real number.</li>
+    <li>If two numbers or objects are selected <b>independently and at random</b>, this means that they are selected at random, and that how one is selected doesn't affect how the other is selected.</li>
+    <li>A <b>real number</b> is a rational number or an irrational number. -1, 2.5, and &pi; are all real numbers. Unless you've learned about complex numbers, every number you know of is a real number.</li>
 </ol>
 
 <a name="answering"></a><h3>Answering Questions</h3>
@@ -59,7 +59,7 @@
     <li>For short finite decimals, we accept both the fractional and the exact decimal form.</li>
     <li>For infinite or long finite decimals, we strongly prefer the fractional form. However, bar notation for repeating infinite decimals is accepted.</li>
     <li>For questions requesting the answer in terms of variables, use the variables as defined in the problem.</li>
-    <li>&ldquo;Divisors&rdquo; refers to positive integral divisors unless otherwise specified.</li>
+    <li>"Divisors" refers to positive integral divisors unless otherwise specified.</li>
     <li>If a question specifies an answer form, such as a + b*sqrt(2), please adhere to the specified form.</li>
 </ol>
 
