--- a/grading/templates/scoreboard.html
+++ b/grading/templates/scoreboard.html
@@ -4,6 +4,7 @@
 {% block content %}
 
 <form action="{% url 'scoreboard' %}" method="POST">
+    {% csrf_token %}
     <input type="hidden" name="recalculate">
     <input type="submit" value="Submit">
 </form>
@@ -12,18 +13,79 @@
         <td valign="top">
             <h2>Individual - Ramanujan</h2>
             <table id="ramanujan" class="table table-striped">
-                {% for division in individual_scores %}
-                    {{ division }}
+                {% for name, score in individual_scores.ramanujan %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
                 {% endfor %}
             </table>
         </td>
         <td valign="top">
             <h2>Individual - Pascal</h2>
             <table id="pascal" class="table table-striped">
+                {% for name, score in individual_scores.pascal %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top">
+            <h2>Team Individual - Ramanujan</h2>
+            <table id="ramanujan" class="table table-striped">
+                {% for name, score in team_individual_scores.ramanujan %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
+        <td valign="top">
+            <h2>Team Individual - Pascal</h2>
+            <table id="pascal" class="table table-striped">
+                {% for name, score in team_individual_scores.pascal %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td valign="top">
+            <h2>Individual - Ramanujan</h2>
+            <table id="ramanujan" class="table table-striped">
+                {% for name, score in team_scores.ramanujan %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
+        <td valign="top">
+            <h2>Individual - Pascal</h2>
+            <table id="pascal" class="table table-striped">
+                {% for name, score in team_scores.pascal %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ score }}</td>
+                    </tr>
+                {% endfor %}
             </table>
         </td>
     </tr>
 </table>
-
-<script type="text/javascript" src="{% static "js/guts.js" %}"></script>
 {% endblock %}
