--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -7,14 +7,14 @@
     <tr>
         <td valign="top">
             <h2>Ramanujan</h2>
-            <table id="ramanujan" class="table table-striped">
-                <tbody></tbody>
+            <table class="table table-striped">
+                <tbody id="ramanujan"></tbody>
             </table>
         </td>
         <td valign="top">
             <h2>Pascal</h2>
-            <table id="pascal" class="table table-striped">
-                <tbody></tbody>
+            <table class="table table-striped">
+                <tbody id="pascal"></tbody>
             </table>
         </td>
     </tr>
