Added bonus and power debug.

--- a/frontend/static/css/master.css
+++ b/frontend/static/css/master.css
@@ -309,6 +309,12 @@ table#tags td {
     width: 99%;
 }
 
+.individual-debug {
+    margin: 0 20px;
+    margin-bottom: 30px;
+    display: block;
+}
+
 
 .italics { font-style: italic; }
 .gray { color: gray; }
