--- a/grading/templates/student_scoreboard.html
+++ b/grading/templates/student_scoreboard.html
@@ -69,4 +69,13 @@
     </tr>
 </table>
 {% endfor %}
+
+<code class="individual-debug">
+Bonus:<br>
+{{ individual_bonus }}
+<br><br>
+Powers:<br>
+{{ individual_powers }}
+</code>
+
 {% endblock %}
