Fixing scoring system, added question renumbering.

--- a/frontend/static/css/master.css
+++ b/frontend/static/css/master.css
@@ -326,3 +326,10 @@ table#tags td {
     margin: 0;
 }
 .red { color: red; }
+
+.freeze {
+    display: inline-block;
+    font-family: 'Roboto', serif;
+    font-size: 20px;
+    margin-top: 7px;
+}
