--- a/grading/templates/grader.html
+++ b/grading/templates/grader.html
@@ -7,7 +7,7 @@
         {% if mode == "student" %}
         window.location.href = "{% url 'student_view' %}";
         {% elif mode == "team" %}
-        window.location.href = "{% url 'teams_view' %}";
+        window.location.href = "{% url 'team_view' %}";
         {% endif %}
     }
 </script>
