Fixed team score view.

--- a/frontend/static/css/master.css
+++ b/frontend/static/css/master.css
@@ -309,6 +309,10 @@ table#tags td {
     width: 99%;
 }
 
+table.single {
+    margin: 0 20px;
+}
+
 .individual-debug {
     margin: 0 20px;
     margin-bottom: 30px;
