--- a/grading/templates/team_scoreboard.html
+++ b/grading/templates/team_scoreboard.html
@@ -29,21 +29,28 @@
 </code>
 {% endif %}
 
-{% for division, scores in team_scores %}
-<h2>{{ division }}</h2>
-<table class="table table-striped scoreboard">
-    {% for name, guts, guts_z, team, team_z, overall in scores %}
-        <tr>
-            <td>{{ forloop.counter }}</td>
-            <td class="name">{{ name }}</td>
-            <td>{{ guts }}<br>{{ guts_z }}</td>
-            <td>{{ team }}<br>{{ team_z }}</td>
-            <td>{{ overall }}</td>
-            <td>{{ score|floatformat:3 }}</td>
-        </tr>
+<table class="scoreboard">
+    <tr valign="top">
+        {% for division, scores in team_scores %}
+        <td>
+            <h2>{{ division|capfirst }}</h2>
+            <table class="table table-striped">
+                {% for name, guts, guts_z, team, team_z, overall in scores %}
+                    <tr>
+                        <td>{{ forloop.counter }}</td>
+                        <td>{{ name }}</td>
+                        <td>{{ guts|floatformat:3 }}<br>{{ guts_z|floatformat:3 }}</td>
+                        <td>{{ team|floatformat:3 }}<br>{{ team_z|floatformat:3 }}</td>
+                        <td>{{ overall|floatformat:3 }}</td>
+                        <td>{{ score|floatformat:3 }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </td>
     {% endfor %}
+    </tr>
 </table>
-{% endfor %}
+
 
 
 {% endblock %}
