--- a/grading/templates/student_view.html
+++ b/grading/templates/student_view.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% load grading_status %}
+{% load attending %}
 
 {% block extrahead %}
 <style>body { overflow-y: scroll; }</style>
@@ -28,7 +29,7 @@
     {% for student in students %}
         <tr>
             <td class="number">{{ forloop.counter }}</td>
-            <td class="name">{{ student.name }}</td>
+            <td class="name">{{ student.name }} {% autoescape off %}{{ student|attending }}{% endautoescape %}</td>
             <td class="information">
                 <span class="team-name ellipsis">{{ student.team.name }}</span>
                 <span class="italics">{{ student.team.school.name }}</span>
