--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -40,9 +40,10 @@
                         <li><a href="{% url 'attendance' %}">Attendance</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                Spreadsheets <span class="caret"></span>
+                                Logistics <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a href="{% url 'team_edit' %}">Team editor</a></li>
                                 <li><a href="{% url 'student_name_tags' %}">Student tags</a></li>
                                 <li><a href="{% url 'teacher_name_tags' %}">Teacher tags</a></li>
                                 <li><a href="{% url 'shirts' %}">Shirt sizes</a></li>
