--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -36,7 +36,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                     {% if request.user.is_authenticated %}
-                    {% if perms.app.can_grade %}
+                    {% if perms.grading.can_grade %}
                         <li><a href="{% url 'attendance' %}">Attendance</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
