--- a/grading/templates/guts.html
+++ b/grading/templates/guts.html
@@ -13,7 +13,7 @@
 
 <h1 class="scoreboard-header">
     MBMT Guts Round
-    <span class="right freeze">Freeze!</span>
+    <span id="freeze" class="right" onclick="freeze()">Freeze!</span>
 </h1>
 <table class="scoreboard">
     <tr>
